<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/item_navslid_nombre"
        android:title="@string/nombre" />
    <item
        android:id="@+id/item_navslid_cumpleaños"
        android:title="@string/cumpleaños" />
    <item
        android:id="@+id/item_navslid_telefono"
        android:title="@string/telefono" />
    <item
        android:id="@+id/item_navslid_correo"
        android:title="@string/correo" />
    <item
        android:id="@+id/item_navslid_instagram"
        android:title="@string/instagram" />
    <item
        android:id="@+id/item_navslid_passworld"
        android:title="@string/password" />
</menu>