<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TextosFragment"
    >
    <data>
        <variable name="viewModel"
            type="neuroark.appsytutoriales.pruebadigitalcoaster.ui.main.actividad_1.TextosModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/titulo_texto" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/titulo_lista_completa" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:text="@={viewModel.textoListaCompleta}" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/titulo_lista_mas_grandes" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:text="@={viewModel.textoListaGrandes}" />
        <EditText
            android:id="@+id/editTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:text="@={viewModel.editTexto}"
            android:inputType="text"
            android:autofillHints="@string/hint_texto"
            android:textSize="@dimen/edit_tamano"
            tools:ignore="LabelFor" />
        <android.widget.Button
            android:id="@+id/botonTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:background="@drawable/forma_rectangulo_boton_1"
            android:textColor="@color/estados_color_boton"
            android:textAllCaps="false"
            android:text="@string/boton_anadir" />
    </LinearLayout>
</layout>