<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_actividad"
    tools:context=".ui.main.NavegadorFragment">

    <android.widget.Button
        android:id="@+id/button_nav_act1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/fondo_boton"
        android:elevation="@dimen/text_margin"
        android:padding="@dimen/boton_padding"
        android:text="@string/actividad_1"
        android:textAllCaps="false"
        android:textColor="@color/estados_color_boton"
        android:textSize="@dimen/boton_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <android.widget.Button
        android:id="@+id/button_nav_act2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/fondo_boton"
        android:elevation="@dimen/text_margin"
        android:padding="@dimen/boton_padding"
        android:text="@string/actividad_2"
        android:textAllCaps="false"
        android:textColor="@color/estados_color_boton"
        android:textSize="@dimen/boton_nav"
        app:layout_constraintBottom_toTopOf="@+id/button_nav_act3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_nav_act1"
        app:rippleColor="@color/design_default_color_error" />

    <android.widget.Button
        android:id="@+id/button_nav_act3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/fondo_boton"
        android:elevation="@dimen/text_margin"
        android:padding="@dimen/boton_padding"
        android:text="@string/actividad_3"
        android:textAllCaps="false"
        android:textColor="@color/estados_color_boton"
        android:textSize="@dimen/boton_nav"
        app:layout_constraintBottom_toTopOf="@+id/button_nav_act2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_nav_act4"
        app:rippleColor="@color/design_default_color_error" />

    <android.widget.Button
        android:id="@+id/button_nav_act4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/fondo_boton"
        android:elevation="@dimen/text_margin"
        android:padding="@dimen/boton_padding"
        android:text="@string/actividad_4"
        android:textAllCaps="false"
        android:textColor="@color/estados_color_boton"
        android:textSize="@dimen/boton_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:rippleColor="@color/design_default_color_error" />

</androidx.constraintlayout.widget.ConstraintLayout>